<resources>
    <string name="app_name">Giovanni</string>
    <string name="home">Home</string>
    <string name="listview">ListView</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="log">Toast\nArray\nArticolo\nAscensore\nDipendente e Progetto\nViewPager + TabLayout\naddOnPageChangeListener\nDipendente, Manager e Azienda</string>
    <string name="title">Titolo</string>
    <string name="study_the_code">Studiare l\'applicazione analizzando su Logcat i suoi log e inserendo il TAG opportuno.</string>
    <string name="array">Array</string>
    <string name="articolo">Articolo</string>
    <string name="prezzo_articolo">Prezzo</string>
    <string name="ascensore">Ascensore</string>
    <string name="dipendente_progetto">Dipendente e Progetto</string>
    <string name="dipendente_manager_azienda">Dipendente, Manager e Azienda</string>
    <string name="hello_world">hello world!</string>
    <string name="digita_nome">Digita il tuo nome</string>
    <string name="digita_numero">Digita un numero a tre o più cifre</string>
    <string name="invio">Invio</string>
    <string name="long_text">Il contenuto di questa stringa è troppo lungo per essere contenuto tutto nel layout.</string>
    <string name="login_intent">Login\nSharedPreferences\nCustomButton Class\n@style/CustomButton\n@drawable/round_button\n@drawable/custom_button\n@drawable/button_selector\nIntent + startActivityForResult</string>
    <string name="android">Android</string>
    <string name="audioslave">Audioslave</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="dati_utenti">Giovanni 123\nRaffaele 234\nGianluigi 345\nMariano 456\nDaniele 567\nFrank 678\nLino 789</string>
    <string name="email">Email</string>
    <string name="ontouchevent_message">Tappa 5 volte sullo schermo in meno di 3 secondi.</string>
    <string name="fake">FAKE</string>
    <string name="scegli_gruppo">Quale gruppo vuoi ascoltare?</string>
    <string name="enjoy">Enjoy</string>
    <string name="data_attuale">Data attuale:</string>
    <string name="data_generica">Data generica:</string>
    <string name="memory">Memory</string>
    <string name="checkbox1">CheckBox 1</string>
    <string name="checkbox2">CheckBox 2</string>
    <string name="check">Check</string>
    <string name="contract_conditions">Ho preso visione e accetto le Condizioni di Contratto</string>
    <string name="economic_conditions">Ho preso visione e accetto le Condizioni Economiche di Contratto</string>
    <string name="conditions_accepted">Condizioni accettate</string>
    <string name="serializable">Regex\nonBackPressed\nSpinnerHintAdapter\nSerializable Magazzino\nActivity Transition Animation</string>
    <string name="scegli_articolo">QUALE ARTICOLO VUOI INSERIRE?</string>
    <string name="scegli_animazione">Scegli l\'animazione da associare al Button Camicia.</string>
    <string name="camicia">Camicia</string>
    <string name="dvd">DVD</string>
    <string name="libro">Libro</string>
    <string name="magazzino">MAGAZZINO</string>
    <string name="digita_id">Digita l\'ID (di 2 cifre)</string>
    <string name="digita_nome_prodotto">Digita il nome</string>
    <string name="digita_prezzo">Digita il prezzo</string>
    <string name="digita_taglia">Digita la taglia (numerica)</string>
    <string name="digita_colore">Digita il colore</string>
    <string name="digita_regista">Digita il regista</string>
    <string name="digita_autore">Digita l\'autore</string>
    <string name="aggiungi">Aggiungi al carrello</string>
    <string name="inserisci">Inserisci</string>
    <string name="istview_simple">list_item\nsimple_list_item_1</string>
    <string name="two_listview_copy">Two ListView copy</string>
    <string name="copy">Copia</string>
    <string name="two_listview_adapter">Adapter\nTwo ListView</string>
    <string name="two_listview_thread">Thread\nTwo ListView</string>
    <string name="listview_adapter_rubrica">ListView\nAdapter Rubrica</string>
    <string name="id">ID</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="numero">Numero</string>
    <string name="listview_azienda">Spinner\nAzienda Serializable</string>
    <string name="inserisci_dipendente">Inserisci dipendente</string>
    <string name="cerca_dipendente">Cerca dipendente</string>
    <string name="scegli_dipendente">Quale dipendente vuoi inserire?</string>
    <string name="inserire_id">Inserire l\'ID</string>
    <string name="inserire_nome">Inserire il nome</string>
    <string name="inserire_cognome">Inserire il cognome</string>
    <string name="conferma">Conferma</string>
    <string name="cerca_id">Cerca dipendente per ID progetto</string>
    <string name="mostra_azienda">Mostra azienda</string>
    <string name="mostra_utenti">Mostra utenti</string>
    <string name="progetto">Progetto</string>
    <string name="vario">Vario</string>
    <string name="recyclerview_cambiaprezzo">clipToPadding\nsetOnClickListener\nCardView cambia prezzo</string>
    <string name="prodotto">Prodotto:</string>
    <string name="prezzo">Prezzo:</string>
    <string name="cambia_prezzo">Cambia il prezzo</string>
    <string name="data">Data:</string>
    <string name="ora">Ora:</string>
    <string name="cerca_ora">Cerca ora</string>
    <string name="cerca_data">Cerca data</string>
    <string name="mostra_data">Mostra data</string>
    <string name="recyclerview_project">Progetti + Spinner</string>
    <string name="show_projects">Mostra i progetti</string>
    <string name="dettagli">Dettagli</string>
    <string name="personali">Personali</string>
    <string name="completi">Completi</string>
    <string name="recyclerview_add_item">Add Item</string>
    <string name="san_martino">La nebbia a gl\'irti colli\npiovigginando sale,\ne sotto il maestrale\nurla e biancheggia il mar;\n\nma per le vie del borgo\ndal ribollir de\' tini\nva l\'aspro odor de i vini\nl\'anime a rallegrar.\n\nGira su\' ceppi accesi\nlo spiedo scoppiettando:\nsta il cacciator fischiando\nsu l\'uscio a rimirar\n\ntra le rossastre nubi\nstormi d\'uccelli neri,\ncom\'esuli pensieri,\nnel vespero migrar.</string>
    <string name="viewpager_tablayout">Calcolatrice\nPin Effect + FAB\nParallax Effect\nCheckBox + openUrl\nPull to Refresh + Random</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragment_4">Fragment 4</string>
    <string name="viewpager_newinstance">ViewPager newInstance</string>
    <string name="show_position">Show Position</string>
    <string name="move_bar">Move Bar</string>
    <string name="set_height">Set Height</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_c">Fragment C</string>
    <string name="ciao">Ciao</string>
    <string name="back">Back</string>
    <string name="recyclerview_header_item">Header Item</string>
    <string name="recyclerview_openfragment">addViews\nOpenFragment\nOnItemViewClicked Interface</string>
    <string name="recyclerview_viewpager">ViewPager\nLayoutTransition\nnotifyItemRemoved</string>
    <string name="offset">Offset\nScrollView Sticky\nViewPager + TabLayout Custom</string>
    <string name="recyclerview_accordion">Accordion</string>
    <string name="recyclerview_gridlayout">GridLayout</string>
    <string name="text_layout">SetText\nSet Layout</string>
    <string name="setpivotx">setPivotX</string>
    <string name="startanimation">startAnimation</string>
    <string name="density_size_text">Density Size Text</string>
    <string name="fragments">Fragments</string>
    <string name="navigationdrawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title_giovanni_petito">Giovanni Petito</string>
    <string name="nav_header_subtitle_email_giovanni">giovanni.petito88@gmail.com</string>
    <string name="msisdn_giovanni">3331582355</string>
    <string name="name_giovanni">Giovanni</string>
    <string name="surname_giovanni">Petito</string>
    <string name="addtextchangedlistener">MVP Pattern\nProgressBar\nAddTextChangedListener\nAutoCompleteTextView</string>
    <string name="mvp_kotlin_login">MVP Pattern\nKotlin Login\nProgressBar</string>
    <string name="username_error">Il campo Username non può essere vuoto</string>
    <string name="password_error">Il campo Password non può essere vuoto</string>
    <string name="fragment_dialog">Fragment Dialog</string>
    <string name="button_show_dialog">Show Dialog</string>
    <string name="button_close_dialog">Close Dialog</string>
    <string name="activate_the_search">Attiva la ricerca</string>
    <string name="search_by_name_or_msisdn">Cerca per nome o msisdn</string>
    <string name="no_result_by_search">Nessun risultato con questa stringa di ricerca.</string>
    <string name="no_list">Nessuna lista presente.</string>
    <string name="reset">Reset</string>
    <string name="google_maps">Google Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">normal map</string>
    <string name="hybrid_map">hybrid map</string>
    <string name="satellite_map">satellite map</string>
    <string name="terrain_map">terrain map</string>
    <string name="cerca">Cerca…</string>
    <string name="high_score">High Score</string>
    <string name="insert_name">Inserisci il tuo nome</string>
    <string name="show_record">Show Record</string>
    <string name="thread_pics">Thread pics</string>
    <string name="thread_async_task">Thread AsyncTask</string>
    <string name="thread_async_task_counter">Thread AsyncTask Counter</string>
    <string name="replace">Replace</string>
    <string name="start_progress">Start Progress</string>
    <string name="upload_next_image">Carica la prossima immagine</string>
    <string name="Increase_counter">Incrementa il contatore</string>
    <string name="firebase">Firebase</string>
    <string name="firebase_rest">Rest</string>
    <string name="firebase_json_parse">Rest\nJSON Parse</string>
    <string name="firebase_login">Rest\nLogin\nJSON Parse\nInternal Storage\nShared Preferences</string>
    <string name="firebase_articoli">Articoli</string>
    <string name="firebase_community">Community</string>
    <string name="firebase_push">Push</string>
    <string name="stop_service">Stop Service</string>
    <string name="subscribe_topics">Subscribe topics</string>
    <string name="get_token">Get token</string>
    <string name="firebase_token">Token: %1$s</string>
    <string name="firebase_topic_subscription_success">Sottoscrizione al topic avvenuta con successo</string>
    <string name="firebase_topic_subscription_failed">Sottoscrizione al topic avvenuta fallita</string>
    <string name="firebase_notification_channel_id">giovanni_id</string>
    <string name="firebase_notification_channel_name">giovanni_name</string>
    <string name="data_binding_meteo">Data Binding Meteo</string>
    <string name="data_binding_url">Data Binding Url</string>
    <string name="data_binding_layout">Data Binding Layout</string>
    <string name="place">Luogo</string>
    <string name="temperature">Temperatura</string>
</resources>