<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green"
    android:padding="@dimen/dimen_15dp">

    <RelativeLayout
        android:id="@+id/title_menu_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="@dimen/dimen_15dp"
            android:textColor="@color/green" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_menu_container"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:text="@string/log"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/login_intent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/login_intent"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/serializable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/serializable"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/text_layout"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/listview"
                android:textColor="@color/orange"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview"
                android:textColor="@color/red"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/fragments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/fragments"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/viewpager_tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/viewpager_tablayout"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/viewpager_newinstance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/viewpager_newinstance"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/offset"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/navigationdrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/navigationdrawer"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/addtextchangedlistener"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/addtextchangedlistener"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/mvp_kotlin_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/mvp_kotlin_login"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/fragment_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/fragment_dialog"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/google_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/google_maps"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/high_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/high_score"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/thread_pics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/thread_pics"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/thread_async_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/thread_async_task"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/thread_async_task_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/thread_async_task_counter"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/firebase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/firebase"
                android:textColor="@color/yellow"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/data_binding_meteo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/data_binding_meteo"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/data_binding_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/data_binding_url"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/data_binding_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/data_binding_layout"
                style="@style/HomeButton" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>