<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosso_2"
    android:padding="@dimen/dimen_15dp">

    <RelativeLayout
        android:id="@+id/title_recyclerview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="@dimen/dimen_15dp"
            android:textColor="@color/rosso_2" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_recyclerview_container"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/recyclerview_cambiaprezzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_cambiaprezzo"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_project"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_add_item"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_header_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_header_item"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_openfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_openfragment"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_viewpager"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_accordion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_accordion"
                style="@style/HomeButton" />

            <Button
                android:id="@+id/recyclerview_gridlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:text="@string/recyclerview_gridlayout"
                style="@style/HomeButton" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>