<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".serializablemagazzino.LibroActivity">

    <ImageView
        android:id="@+id/imageLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/libro" />

    <TextView
        android:id="@+id/textLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/libro"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/verde_3" />

    <EditText
        android:id="@+id/editID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLibro"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/digita_id"
        android:inputType="phone"
        android:textAlignment="center"
        android:autofillHints="@string/app_name" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editID"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/digita_nome_prodotto"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:autofillHints="@string/app_name" />

    <EditText
        android:id="@+id/editPrezzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNome"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/digita_prezzo"
        android:inputType="phone"
        android:textAlignment="center"
        android:autofillHints="@string/app_name" />

    <EditText
        android:id="@+id/editAutore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPrezzo"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/digita_autore"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:autofillHints="@string/app_name" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/back"
        android:layout_below="@+id/imageLibro"
        style="@style/HomeButton" />

    <Button
        android:id="@+id/buttonAggiungi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:text="@string/aggiungi"
        android:textColor="@color/azzurro_2"
        android:background="@drawable/custom_button" />

</RelativeLayout>