<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:text="@string/stop_service"
        android:textColor="@color/azzurro_2"
        android:background="@drawable/custom_button" />

    <Button
        android:id="@+id/subscribe_topic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:text="@string/subscribe_topics"
        style="@style/HomeButton" />

    <Button
        android:id="@+id/get_token_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:text="@string/get_token"
        style="@style/HomeButton" />

</LinearLayout>